<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InstaClimb</string>
    <string name="show_settings">Settings</string>
    <string name="show_about">About this App</string>
    <string name="hello_world">Hello world!</string>
    <string name="ascent_name">Ascent Name</string>
    <string name="location">Location</string>
    <string name="optional_name_of_the_boulder_route">Optional name of the boulder/route</string>
    <string name="optional_location_of_the_boulder_route">Optional location of the boulder/route</string>
    <string name="next_">Next >></string>
    <string name="title_activity_show_capture">ShowCapture</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="showCaptureContentDescr">Shows the captured image</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_climbing_info">Climbing Info</string>
    <string name="action_settings">Settings</string>
    <string name="routeboulder">Route/Boulder</string>
    <string name="instaclimb_logo">instaclimb logo</string>
    <string name="skip">Skip</string>
    <string name="clear">Clear</string>
    <string name="done">Done</string>

</resources>
